<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeCycle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Restart</string>
    
    <!-- added -->
	<string name="sun">Sun</string>
	<string name="grass">Grass</string>
	<string name="sky">Sky</string>
	<string name="clock">Clock</string>
	<string name="hour">Hour Hand</string>
</resources>
