<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
 
    
    <ImageView
    android:id="@+id/sky"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/sky"
        android:scaleType="fitXY"
    android:src="@drawable/sky"
        />

    <ImageView
        android:id="@+id/nightsky"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/night1"
        android:scaleType="fitXY"/>
    
    <ImageView
    android:id="@+id/sun"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/sun"
    android:scaleType="fitCenter"
    android:src="@drawable/sun" />

    <ImageView
        android:id="@+id/moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/moon"/>
    
    <ImageView
    android:id="@+id/grass"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:layout_alignParentBottom="true"
    android:contentDescription="@string/grass"
    android:src="@drawable/grass" />


    
    <ImageView
    android:id="@+id/clock"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:contentDescription="@string/clock"
    android:padding="10dp"
    android:src="@drawable/clock" />
    
    <ImageView
    android:id="@+id/hour"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:contentDescription="@string/hour"
    android:padding="10dp"
    android:src="@drawable/hour_hand" />



</RelativeLayout>